# tactile

./: .gitignore  PLAN.md  README.md  agent_files.txt  plan.md  src_files.txt
agent/: .env  .env.template  Dockerfile  cad_agent.py  deployment.yaml  fireworks_client.py  main.py  models.py  pyproject.toml  report_generator.py  requirements.txt  spec.md  test_agent_stream.py  test_cad_tool.py  test_pipeline.py  test_screenshot.py
agent/cad_tool/: source.py
agent/cad_tool/analyze/: __init__.py  analyzer.py  assembly_analyzer.py  geometry_analyzer.py  report_generator.py
agent/cad_tool/parse/: parse.py
agent/cad_tool/suggest/: __init__.py  suggester.py
agent/cad_tool/validate/: validator.py
agent/tools/: __init__.py  backend_client.py  cadquery_executor.py  memory_client.py  parts_search.py  screenshot_renderer.py  x402_client.py
backend/: .env.example  Dockerfile  build.gradle.kts  deployment.yaml  openapi.json
frontend/: .gitignore  Dockerfile  deployment.yaml  next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx
frontend/app/(main)/: layout.tsx  page.tsx
frontend/app/dashboard/: layout.tsx
frontend/app/login/: page.tsx
frontend/app/preferences/: layout.tsx  page.tsx
frontend/components/: AuthenticatedLayout.tsx  SideNav.tsx  StepViewer.tsx  TopNav.tsx
frontend/hooks/: useJobEvents.ts  useX402Payment.ts
frontend/providers/: WagmiProvider.tsx  wagmi-config.ts
frontend/public/: occt-worker.js
frontend/services/: auth.ts  jobs.ts  users.ts
src/cad_tool/: source.py
src/cad_tool/analyze/: __init__.py  (+3 more)
(+98 files in other folders)
