[project]
name = "agent"
version = "0.1.0"
description = "Tactile CAD Analysis Agent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "httpx>=0.26.0",
    "pydantic>=2.5.0",
    "python-multipart>=0.0.6",
    "python-dotenv>=1.0.0",
    "cadquery>=2.4.0",
    "motor>=3.3.0",
    "pymongo>=4.6.0",
    "cairosvg>=2.7.0",
    "x402>=0.1.0",
    "eth-account>=0.10.0",
]
